--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
           crossorigin="anonymous"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
 	<link rel="stylesheet" href="<%= BASE_URL %>/css/style.css">
+	<link rel="stylesheet" href="css/icofont.min.css">
 </head>
 <body>
 <noscript>
